@@ -17,6 +17,7 @@ import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/posts")
@@ -34,14 +35,8 @@ public class ApiV1PostController {
     public RsData<GetPostsResponseBody> getPosts() {
         List<Post> items = postService.findByPublished(true);
         List<PostDto> _items = items.stream()
-                .map(post -> {
-                    PostDto dto = new PostDto(post);
-                    dto.setActorCanRead(postService.canRead(rq.getMember(), post));
-                    dto.setActorCanEdit(postService.canEdit(rq.getMember(), post));
-                    dto.setActorCanDelete(postService.canDelete(rq.getMember(), post));
-                    return dto;
-                })
-                .toList();
+                .map(this::postToDto)
+                .collect(Collectors.toList());
 
         return RsData.of(
                 new GetPostsResponseBody(
@@ -65,10 +60,7 @@ public class ApiV1PostController {
         if (!postService.canRead(rq.getMember(), post))
             throw new GlobalException("403-1", "권한이 없습니다.");
 
-        PostWithBodyDto dto = new PostWithBodyDto(post);
-        dto.setActorCanRead(postService.canRead(rq.getMember(), post));
-        dto.setActorCanEdit(postService.canEdit(rq.getMember(), post));
-        dto.setActorCanDelete(postService.canDelete(rq.getMember(), post));
+        PostWithBodyDto dto = postToWithBodyDto(post);
         
         return RsData.of(
                 new GetPostResponseBody(dto)
@@ -120,5 +112,58 @@ public class ApiV1PostController {
         return RsData.of(
                 "%d번 글이 삭제되었습니다.".formatted(id)
         );
+    }
+
+
+    public record LikeResponseBody(@NonNull PostDto item) {
+    }
+    @PostMapping(value = "/{id}/like")
+    @Transactional
+    public RsData<LikeResponseBody> like(
+            @PathVariable long id
+    ) {
+        Post post = postService.findById(id).orElseThrow(GlobalException.E404::new);
+        if (!postService.canLike(rq.getMember(), post))
+            throw new GlobalException("403-1", "권한이 없습니다.");
+        postService.like(rq.getMember(), post);
+        PostDto dto = postToDto(post);
+        return RsData.of(
+                "%d번 글을 추천하였습니다.".formatted(id),
+                new LikeResponseBody(dto)
+        );
+    }
+    public record CancelLikeResponseBody(@NonNull PostDto item) {
+    }
+    @DeleteMapping(value = "/{id}/cancelLike")
+    @Transactional
+    public RsData<CancelLikeResponseBody> cancelLike(
+            @PathVariable long id
+    ) {
+        Post post = postService.findById(id).orElseThrow(GlobalException.E404::new);
+        if (!postService.canCancelLike(rq.getMember(), post))
+            throw new GlobalException("403-1", "권한이 없습니다.");
+        postService.cancelLike(rq.getMember(), post);
+        PostDto dto = postToDto(post);
+        return RsData.of(
+                "%d번 글을 추천취소하였습니다.".formatted(id),
+                new CancelLikeResponseBody(dto)
+        );
+    }
+    private PostDto postToDto(Post post) {
+        PostDto dto = new PostDto(post);
+        loadAdditionalInfo(dto, post);
+        return dto;
+    }
+    private PostWithBodyDto postToWithBodyDto(Post post) {
+        PostWithBodyDto dto = new PostWithBodyDto(post);
+        loadAdditionalInfo(dto, post);
+        return dto;
+    }
+    private void loadAdditionalInfo(PostDto dto, Post post) {
+        dto.setActorCanRead(postService.canRead(rq.getMember(), post));
+        dto.setActorCanEdit(postService.canEdit(rq.getMember(), post));
+        dto.setActorCanDelete(postService.canDelete(rq.getMember(), post));
+        dto.setActorCanLike(postService.canLike(rq.getMember(), post));
+        dto.setActorCanCancelLike(postService.canCancelLike(rq.getMember(), post));
     }
 }
